# gdelta

./: CMakeLists.txt  LICENSE  README.md  gdelta.cpp  gdelta.h  gdelta_original.cpp  gdelta_original.h  gear-matrix.h  gear-mx.h  gear_matrix.h  gear_matrix_original.h  main.cpp  md5.c  md5.h  test.sh  test_portability.sh
.github/workflows/: cmake.yml
compat/: getopt.c  getopt.h  msvc.c  msvc.h
